--- a/HPTSampleGit/.settings/org.eclipse.core.resources.prefs
+++ b/HPTSampleGit/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/test/LoginHrm_Schedule_A1EE24A2082DB861EE8EB56464316636.java=UTF-8
 encoding//src/test/Test1DemoQaGIT_Test_A1EE1EF476982500CC11E63438303633.java=UTF-8
 encoding/<project>=UTF-8
